@@ -1,6 +1,6 @@
-/* $Id: natpmp.c,v 1.56 2018/07/06 12:05:47 nanard Exp $ */
+/* $Id: natpmp.c,v 1.57 2019/09/24 11:48:01 nanard Exp $ */
 /* MiniUPnP project
- * (c) 2007-2017 Thomas Bernard
+ * (c) 2007-2019 Thomas Bernard
  * http://miniupnp.free.fr/ or http://miniupnp.tuxfamily.org/
  * This software is subject to the conditions detailed
  * in the LICENCE file provided within the distribution */
