@@ -1,6 +1,6 @@
 --- miniupnpd/Makefile.linux
 +++ miniupnpd/Makefile.linux
-@@ -116,7 +116,13 @@ TEST := $(shell [ $(IPTVER1) -gt 1 ] ||
+@@ -117,7 +117,13 @@ TEST := $(shell [ $(IPTVER1) -gt 1 ] ||
  LDLIBS = $(IPTABLESPATH)/libiptc/.libs/libip4tc.o
  #LDLIBS = $(IPTABLESPATH)/libiptc/.libs/libiptc.a
  else # ifeq ($(TEST), 1)
